2010-09-22  Sancho Lerena <slerena@artica.es>

	* include/functions_incidents.php
	include/functions_pop3.php: Fixed two issues with workunit notifications
	and pop3 message processing on Base64 mails.

2010-09-20  Sancho Lerena <slerena@artica.es>

	* DEBIAN: Added DEBIAN files to build .deb packages.

	* attachment/filereleases: Removed old directory, not used anymore.

	* integria.spec: Some updates for RPM packages.

	* integria_db.sql: Removed "USING BTREE" in SQL for compatibility 
	with debian 5.x systems.

	* include/config.inc.php: Removed some conf tokes already in DB.
	
	* include/config_process.php: Better way to build session name based
	on IP address.
	
	* include/functions_db.php: Fix the missing TM in ACL function for
	opensource version.

	* install.php: Removed pear deps, only used for update manager.
	
	* operation/incidents/incident_files.php: Uses relative path to access
	files, avoiding problems with absolute URL in multidomain sites.
	
	* operation/projects/task_detail.php: Fixed some ACL problems (TM)
	
	* operation/kb/browse.php, 
    operation/side_menu.php
    operation/download/manage_data.php
    operation/user_report/report_monthly.php: Fixes some ACL problems (TM)

	* general/header.php: Added quick search to header.
	
	* godmode/setup/logviewer.php: New log viewer on setup.

2010-09-19  Sancho Lerena <slerena@artica.es>

    * include/functions_reporting.php: Added new graph for project, incident and
    task tracking in time.

    * include/functions_db.mysql.php: All specific mysql code is here now.

    * include/gantt.php: Deleted old stuff.

    * include/config.inc.php: Fixed an important missing "/include/" in the 
    config_process load :-o. That makes install from the installer fails.

    * config_process.php: Log error is not working, problem fixed.

    * include/functions_calendar.php: Some improvements in the way calendars
    are shown.

    * operation/download/manage_cat.php: Fixed problem with previous commit with