@@ -1,3 +1,8 @@
+2010-09-24  Sancho Lerena <slerenaartica.es>
+
+	* include/functions_incidents.php: Fixed again the ticketing/pop3
+	feature, was passing email, not userid.
+
 2010-09-22  Sancho Lerena <slerena@artica.es>
 
 	* include/functions_incidents.php
